--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,7 +5,7 @@ body {
 }
 
 div#root {
-  background-color: lightgray;
+  background-color: whitesmoke;
 }
 
 #brokers,
@@ -23,8 +23,10 @@ div#root {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
 
 }
+
 .hero-text {
   text-align: center;
   position: absolute;
@@ -36,14 +38,14 @@ div#root {
   font-size: large;
 }
 
-#brokers {
-  background-image: url("../../public/images/calculator.jpeg");
+// #brokers {
+//   background-image: url("../../public/images/calculator.jpeg");
 
-}
+// }
 
-#calculator {
-  background-image: url("../../public/images/calculator.jpeg");
-}
+// #calculator {
+//   background-image: url("../../public/images/calculator.jpeg");
+// }
 
 
 .profile img {
@@ -52,6 +54,8 @@ div#root {
   text-align: center;
   position: relative;
   border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
 
@@ -77,15 +81,16 @@ div#home {
 
 
 .res-container {
-  background-color: #0080FF;
   border-radius: 5px;
   opacity: 0.85;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  
   
 }
 
 .calc-card.card {
   background-color: #0080FF;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   
  
   
@@ -110,26 +115,37 @@ div#home {
 }
 
 input#formBasicCity.form-control {
-  width: 50%;
-  margin-left: 25%;
+  width: 30%;
 }
-
-
-
 
 
 
 
 /* Broker List
 **************************************************** */
-#broker-list figure img {
- aspect-ratio: 1 / 1;
- object-fit: cover;
+#broker-list {
+
+  figure img {
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+  }
+
+ .panel {
+  // background-color: lightgray;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  
+    .content {
+      padding: 1.3rem;
+      
+    }
+
+
+    .content p {
+      line-height: 0.7rem;
+    }    
+  }
 }
 
-#broker-list div {
-  background-color: lightgray;
-}
 
 .table-list {
   background-color: lightgray;
@@ -137,13 +153,16 @@ input#formBasicCity.form-control {
 }
 
 .table-list.card {
-  background-color:#0080FF
+  background-color:#0080FF;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  
 }
 
 div.add-request.card {
   background-color:#0080FF;
   opacity: 0.80;
   font-weight: 700;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 div.add-request.card.h2 {
@@ -160,6 +179,7 @@ div.add-request.card.h2 {
 
 .dashboard-container.card {
   opacity: 0.80;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .card {
@@ -173,9 +193,8 @@ div.add-request.card.h2 {
   padding-top: 20px;
   border-radius: 2%;
   background-color: lightgray;
-
-  
 }
+
 .calc-card h2 {
   font-weight: 700;
 }
@@ -198,6 +217,7 @@ div.add-request.card.h2 {
 .register-card.card {
   background-color: #0080FF;
   opacity: .85;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   
 }
 
@@ -208,6 +228,7 @@ div.add-request.card.h2 {
 .login-card.card {
   opacity: 0.85;
   background-color:#0080FF;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .login-card h2 {
@@ -217,23 +238,21 @@ div.add-request.card.h2 {
 // Navbar 
 
 .nav-bar {
-  background-color: lightgray;
+  background-color: whitesmoke;
   opacity: 0.75;
   font-weight: 700;
 }
 
 .navbar-expand .navbar-nav {
-  background-color: #0080FF;
   border-radius: 5px;
-
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .nav-bar.navbar.navbar-expand.navbar-light {
   padding-left: 15px;
   padding: 10px;
+  
 }
-
-
 
 
 
