--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -63,7 +63,7 @@ div#root {
 button.btn {
   font-weight: 200;
   background-color: grey;
-  padding: 10px 20px;
+  padding: 5px 15px;
 }
 
 button.btn:hover {
@@ -84,7 +84,7 @@ div#home {
   border-radius: 5px;
   opacity: 0.85;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
- 
+  padding: 25px;
   
 }
 
@@ -92,12 +92,11 @@ div#home {
   background-color: #0080FF;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   
- 
-  
 }
 
 .footer-container {
-  padding-top: 25px;
+  padding-bottom: 25px;
+  padding-top: 50px;
 }
 
 .dashboard-container.card {
@@ -114,10 +113,20 @@ div#home {
   font-size: x-large;
 }
 
-input#formBasicCity.form-control {
-  width: 30%;
+// input#formBasicCity.form-control {
+//   width: 30%;
+// }
+
+.card-search.card {
+  background-color: whitesmoke;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
 }
 
+.resource-card.card {
+  background-color: whitesmoke;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
 
 
 
@@ -148,9 +157,9 @@ input#formBasicCity.form-control {
 
 
 .table-list {
-  background-color: lightgray;
   opacity: .80;
 }
+
 
 .table-list.card {
   background-color:#0080FF;
@@ -163,6 +172,7 @@ div.add-request.card {
   opacity: 0.80;
   font-weight: 700;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding: 40px;
 }
 
 div.add-request.card.h2 {
@@ -170,7 +180,13 @@ div.add-request.card.h2 {
 }
 
 .modal-body {
-  font-weight: 700;
+  font-weight: 600;
+  background-color: lightgray;
+  text-align: center;
+  border-radius: 5px;
+  
+
+  
 }
 
 .modal-body.h2 {
